--- a/project_eco_find/Base.lproj/Main.storyboard
+++ b/project_eco_find/Base.lproj/Main.storyboard
@@ -182,13 +182,16 @@
                                     <action selector="btnTakePicture:" destination="rFK-Bi-iYi" eventType="touchUpInside" id="k4D-Eb-e0t"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hbA-JF-Pb8">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hbA-JF-Pb8">
                                 <rect key="frame" x="129.5" y="764" width="155" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="L68-Yu-Wl4"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Показать на карте"/>
+                                <connections>
+                                    <action selector="searchMapFromScan:" destination="rFK-Bi-iYi" eventType="touchUpInside" id="9tL-3B-tSY"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y1k-ms-vt8">
                                 <rect key="frame" x="87.5" y="373" width="239" height="252"/>
@@ -227,6 +230,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="imageView" destination="y1k-ms-vt8" id="n8W-5G-VIM"/>
+                        <outlet property="searchMapViaScan" destination="hbA-JF-Pb8" id="YFh-Kk-FZJ"/>
                         <outlet property="textView" destination="0ZE-NM-FrI" id="whO-qx-SWy"/>
                     </connections>
                 </viewController>
